feat: REST API 요청에 따른 백엔드 처리 - 데이터 갱신 시에는 PUT 메소드를 사용하도록 변경(POST는 데이터 추가에 사용) - 실제 DB 테이블에 데이터 추가/갱신/삭제 수행(진행중) - postgresql array 형식의 칼럼 값에 대한 인터페이스 처리
