# backend/docs/swagger.yaml
@@ -1,4 +1,13 @@
 definitions:
+  restapi.AddFolderRequest:
+    properties:
+      folder_name:
+        example: my wavywavy
+        type: string
+      user_id:
+        example: wavynoteadmin@gmail.com
+        type: string
+    type: object
   restapi.ChangeFolderNameRequest:
     properties:
       folder_id:
@@ -13,6 +22,43 @@ definitions:
         description: 이름을 변경할 폴더를 소유하고 있는 사용자 ID
         example: wavynoteadmin@gmail.com
         type: string
+    type: object
+  restapi.ChangeNoteFolderRequest:
+    properties:
+      data:
+        items:
+          $ref: '#/definitions/restapi.NoteFolderInfo'
+        type: array
+      folder_id:
+        description: 노트가 저장되는 폴더의 고유 id 값
+        example: 980e71ba-0395-49aa-833e-3ebc76b3ec88
+        type: string
+    type: object
+  restapi.ConversationInfo:
+    properties:
+      conversation_id:
+        description: 대화방 고유의 id 값
+        example: 1afc571d-61bf-4cef-95ce-ab791f999297
+        type: string
+      new_note:
+        description: 대화방에 읽지않은 노트가 존재하는지 여부
+        example: true
+        type: boolean
+      note_count:
+        description: 대화방에 존재하는 노트의 총 개수
+        example: 20
+        type: integer
+      opp_nickname:
+        description: 대화 상대의 별명
+        example: somebody
+        type: string
+    type: object
+  restapi.ConversationListResponse:
+    properties:
+      data:
+        items:
+          $ref: '#/definitions/restapi.ConversationInfo'
+        type: array
     type: object
   restapi.DefaultResponse:
     properties:
@@ -46,15 +92,69 @@ definitions:
         example: 5
         type: integer
     type: object
+  restapi.NoteFolderInfo:
+    properties:
+      note_id:
+        description: 폴더를 변경할 노트의 고유 id 값
+        example: 09d05df1-2958-4a3d-b910-3b4fb079327b
+        type: string
+      user_id:
+        description: 사용자 id
+        example: wavynoteadmin@gmail.com
+        type: string
+    type: object
+  restapi.NoteInfo:
+    properties:
+      content:
+        description: 노트의 본문 내용
+        example: This is the main text of my first wavy note.
+        type: string
+      conversation_id:
+        description: 대화방의 고유 id 값
+        example: ""
+        type: string
+      folder_id:
+        description: 노트가 포함되어 있는 폴더의 고유 id 값
+        example: 980e71ba-0395-49aa-833e-3ebc76b3ec88
+        type: string
+      from_id:
+        description: 노트 작성자(또는 송신자)의 id
+        example: wavynoteadmin@gmail.com
+        type: string
+      keywords:
+        description: 노트의 키워드
+        example:
+        - b0d88d67-01fd-47f8-b426-6ca0657d0f6e
+        items:
+          type: string
+        type: array
+      note_id:
+        description: 노트의 고유 id 값
+        example: 09d05df1-2958-4a3d-b910-3b4fb079327b
+        type: string
+      save_at:
+        description: 노트를 저장한 마지막 날짜 및 시간 정보
+        example: "2023-11-01 21:00:00"
+        type: string
+      send_at:
+        description: 노트를 송신한 날짜 및 시간 정보
+        example: "2023-11-01 23:20:12"
+        type: string
+      title:
+        description: 노트의 제목
+        example: my first note
+        type: string
+      to_id:
+        description: 노트 수신자의 id
+        example: somebody@naver.com
+        type: string
+    type: object
   restapi.NoteListResponse:
     properties:
       data:
         items:
           $ref: '#/definitions/restapi.NoteSimpleInfo'
         type: array
-      user_id:
-        example: wavynoteadmin@gmail.com
-        type: string
     type: object
   restapi.NoteSimpleInfo:
     properties:
@@ -64,7 +164,7 @@ definitions:
         type: string
       preview:
         description: 해당 폴더에 존재하는 노트의 본문 미리보기(글자수 제한)
-        example: This is the main text of my first wavey note.
+        example: This is the main text of my first wavy note.
         type: string
       title:
         description: 해당 폴더에 존재하는 노트의 제목
@@ -164,7 +264,7 @@ definitions:
     properties:
       content:
         description: 내가 쓴 노트의 본문 내용
-        example: This is the main text of my first wavey note.
+        example: This is the main text of my first wavy note.
         type: string
       folder_id:
         description: 내가 쓴 노트가 포함되어 있는 폴더의 고유 id 값
@@ -181,10 +281,6 @@ definitions:
         items:
           type: string
         type: array
-      save_at:
-        description: 노트 저장 시점의 timestamp 정보
-        example: "2023-11-01 21:00:00"
-        type: string
       title:
         description: 내가 쓴 노트의 제목
         example: my first note
@@ -203,10 +299,6 @@ definitions:
       note_id:
         description: 내가 쓴 노트의 고유 id 값
         example: 09d05df1-2958-4a3d-b910-3b4fb079327b
-        type: string
-      send_at:
-        description: 보낸 시간
-        example: "2023-11-01 23:20:12"
         type: string
       to_id:
         description: 내가 쓴 노트를 보내는 대상의 id
@@ -228,6 +320,36 @@ definitions:
     type: object
   restapi.SignUpRequest:
     type: object
+  restapi.UpdateNoteRequest:
+    properties:
+      content:
+        description: 내가 쓴 노트의 본문 내용
+        example: This is the main text of my first wavy note.
+        type: string
+      folder_id:
+        description: 내가 쓴 노트가 포함되어 있는 폴더의 고유 id 값
+        example: 980e71ba-0395-49aa-833e-3ebc76b3ec88
+        type: string
+      from_id:
+        description: 작성자의 id
+        example: wavynoteadmin@gmail.com
+        type: string
+      keywords:
+        description: 내가 쓴 노트의 키워드
+        example:
+        - b0d88d67-01fd-47f8-b426-6ca0657d0f6e
+        items:
+          type: string
+        type: array
+      note_id:
+        description: 내가 쓴 노트의 고유 id 값
+        example: 09d05df1-2958-4a3d-b910-3b4fb079327b
+        type: string
+      title:
+        description: 내가 쓴 노트의 제목
+        example: my first note
+        type: string
+    type: object
 info:
   contact:
     email: chelseafandev@gmail.com
@@ -237,9 +359,13 @@ paths:
     delete:
       description: 특정 대화방 삭제
       parameters:
+      - description: user id
+        in: query
+        name: uid
+        type: string
       - description: conversation id
         in: query
-        name: id
+        name: cid
         type: string
       responses:
         "200":
@@ -277,9 +403,9 @@ paths:
         type: string
       responses:
         "200":
-          description: OK
+          description: 조회된 대화방 목록 정보
           schema:
-            $ref: '#/definitions/restapi.DefaultResponse'
+            $ref: '#/definitions/restapi.ConversationListResponse'
         "400":
           description: 요청에 포함된 파라미터 값이 잘못된 경우입니다
           schema:
@@ -339,15 +465,19 @@ paths:
     get:
       description: 특정 노트 조회
       parameters:
+      - description: conversation id
+        in: query
+        name: cid
+        type: string
       - description: note id
         in: query
-        name: id
+        name: nid
         type: string
       responses:
         "200":
-          description: OK
+          description: 조회한 노트 정보
           schema:
-            $ref: '#/definitions/restapi.DefaultResponse'
+            $ref: '#/definitions/restapi.NoteInfo'
         "400":
           description: 요청에 포함된 파라미터 값이 잘못된 경우입니다
           schema:
@@ -404,8 +534,43 @@ paths:
       - BasicAuth: []
       summary: 특정 폴더 삭제
       tags:
-      - Main 페이지
+      - Main 페이지 - Folder
     post:
+      description: 폴더 추가
+      parameters:
+      - description: 추가할 폴더 정보
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/restapi.AddFolderRequest'
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/restapi.DefaultResponse'
+        "400":
+          description: 요청에 포함된 파라미터 값이 잘못된 경우입니다
+          schema:
+            $ref: '#/definitions/restapi.Response400'
+        "401":
+          description: 인증에 실패한 경우이며, 실패 사유가 전달됩니다
+          schema:
+            $ref: '#/definitions/restapi.Response401'
+        "404":
+          description: 요청한 리소스가 서버에 존재하지 않는 경우입니다
+          schema:
+            $ref: '#/definitions/restapi.Response404'
+        "500":
+          description: 요청을 처리하는 과정에서 서버에 문제가 발생한 경우입니다
+          schema:
+            $ref: '#/definitions/restapi.Response500'
+      security:
+      - BasicAuth: []
+      summary: 폴더 추가
+      tags:
+      - Main 페이지 - Folder
+    put:
       description: 특정 폴더 이름 변경
       parameters:
       - description: 변경하고자 하는 폴더 정보
@@ -439,7 +604,7 @@ paths:
       - BasicAuth: []
       summary: 특정 폴더 이름 변경
       tags:
-      - Main 페이지
+      - Main 페이지 - Folder
   /main/folderlist:
     get:
       description: 존재하는 모든 폴더 목록 조회
@@ -473,7 +638,7 @@ paths:
       - BasicAuth: []
       summary: 존재하는 모든 폴더 목록 조회
       tags:
-      - Main 페이지
+      - Main 페이지 - Folder
   /main/note:
     delete:
       description: 내가 쓴 특정 노트 삭제
@@ -509,7 +674,43 @@ paths:
       - BasicAuth: []
       summary: 내가 쓴 특정 노트 삭제
       tags:
-      - Main 페이지
+      - Main 페이지 - Note
+  /main/notefolder:
+    put:
+      description: 노트가 저장되는 폴더 변경
+      parameters:
+      - description: 노트를 저장할 (변경할)폴더 정보
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/restapi.ChangeNoteFolderRequest'
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/restapi.DefaultResponse'
+        "400":
+          description: 요청에 포함된 파라미터 값이 잘못된 경우입니다
+          schema:
+            $ref: '#/definitions/restapi.Response400'
+        "401":
+          description: 인증에 실패한 경우이며, 실패 사유가 전달됩니다
+          schema:
+            $ref: '#/definitions/restapi.Response401'
+        "404":
+          description: 요청한 리소스가 서버에 존재하지 않는 경우입니다
+          schema:
+            $ref: '#/definitions/restapi.Response404'
+        "500":
+          description: 요청을 처리하는 과정에서 서버에 문제가 발생한 경우입니다
+          schema:
+            $ref: '#/definitions/restapi.Response500'
+      security:
+      - BasicAuth: []
+      summary: 노트가 저장되는 폴더 변경
+      tags:
+      - Main 페이지 - Note
   /main/notelist:
     get:
       description: 특정 폴더에 존재하는 모든 노트 조회
@@ -547,7 +748,7 @@ paths:
       - BasicAuth: []
       summary: 특정 폴더에 존재하는 모든 노트 조회
       tags:
-      - Main 페이지
+      - Main 페이지 - Note
   /profile/duplicate:
     get:
       description: 회원 가입 시 ID 중복 체크
@@ -691,7 +892,7 @@ paths:
       - BasicAuth: []
       summary: 전체 폴더를 대상으로 노트 내용 검색
       tags:
-      - Main 페이지
+      - Main 페이지 - Search
   /search/top:
     get:
       description: 전체 폴더를 대상으로 노트 내용 검색
@@ -729,7 +930,7 @@ paths:
       - BasicAuth: []
       summary: 전체 폴더를 대상으로 노트 내용 검색
       tags:
-      - Main 페이지
+      - Main 페이지 - Search
   /write/opennote:
     post:
       description: 내가 쓴 노트를 오픈 노트에 공유하기
@@ -838,6 +1039,41 @@ paths:
       summary: 내가 쓴 노트 저장
       tags:
       - Write 페이지
+    put:
+      description: 내가 쓴 노트 갱신
+      parameters:
+      - description: 갱신할 노트 정보
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/restapi.UpdateNoteRequest'
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/restapi.DefaultResponse'
+        "400":
+          description: 요청에 포함된 파라미터 값이 잘못된 경우입니다
+          schema:
+            $ref: '#/definitions/restapi.Response400'
+        "401":
+          description: 인증에 실패한 경우이며, 실패 사유가 전달됩니다
+          schema:
+            $ref: '#/definitions/restapi.Response401'
+        "404":
+          description: 요청한 리소스가 서버에 존재하지 않는 경우입니다
+          schema:
+            $ref: '#/definitions/restapi.Response404'
+        "500":
+          description: 요청을 처리하는 과정에서 서버에 문제가 발생한 경우입니다
+          schema:
+            $ref: '#/definitions/restapi.Response500'
+      security:
+      - BasicAuth: []
+      summary: 내가 쓴 노트 갱신
+      tags:
+      - Write 페이지
   /write/send:
     post:
       description: 내가 쓴 노트를 특정 대상에게 보내기
@@ -878,9 +1114,13 @@ paths:
     get:
       description: 내가 쓴 노트 조회
       parameters:
+      - description: user id
+        in: query
+        name: uid
+        type: string
       - description: note id
         in: query
-        name: id
+        name: nid
         type: string
       responses:
         "200":
